[metadata]
name = mitm
author = Felipe Faria
author-email = felipefaria@me.com
summary = Man-in-the-middle proxy with customizable options.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.5
home-page = https://github.com/synchronizing/mitm
project_urls =
    Bug Tracker = https://github.com/synchronizing/mitm/issues
    Documentation = https://synchronizing.github.io/mitm/
    Source Code = https://github.com/synchronizing/mitm/tree/master
license = MIT
classifier =
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords =
    mitm

[extras]
dev =
    pytest
    pytest-cov
    pytest-asyncio
    coveralls
    sphinx
    sphinx-copybutton
    sphinx-autobuild
    furo

[files]
packages =
    mitm

[flake8]
max-line-length = 88
